<resources>
    <string name="app_name">计步器</string>

    <!-- Strings related to login 登录/注册-->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Password Confirm</string>

    <!-- 按钮，登录判断 -->
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="cancel">取消</string>
    <string name="error_empty">用户名或密码不能为空</string>
    <string name="error">用户名或密码错误</string>

    <!-- 注册判断 -->
    <string name="error_empty_username">用户名不能为空</string>
    <string name="error_exist_username">用户名已存在</string>
    <string name="error_empty_password">密码不能为空</string>
    <string name="error_password_confirm">两次密码输入不一致</string>
    <string name="error_register">输入有误，请检查</string>
    <string name="success">注册成功</string>

    <!-- 计步器 -->
    <string name="set"></string>
</resources>
